[package]
name = "charles"
version = "0.1.0"
edition = "2021"
authors = ["Charles Proxy Team"]
description = "A terminal-controlled reverse proxy with TUI, similar to Charles Proxy"

[[bin]]
name = "charles"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
ratatui = "0.24"
crossterm = "0.27"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
