[package]
name = "charles"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
bytes = "1.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
parking_lot = "0.12"
once_cell = "1.20"
reqwest = { version = "0.12", features = ["json"] }
